<?xml version="1.0" encoding="utf-8"?>
<!--
	strings.xml 
Purpose: Midterm Demo
Author : File generated by Eclipse IDE
		Joao Felipe
		joaofelipenp@gmail.com
CSE 467S - Embedded Computing Systems
WUSTL, Spring 2013
Date   : Mar., 23, 2013
Description:
	Defines variables for strings used in interface
Version log:
	3/24/2013, Joao Felipe
		Added variables xyz, graph_title and auto_scroll. 
		Changed app_name from HelloWorld to SleepingBeauty
-->
<resources>

    <string name="app_name">SleepingBeauty</string>
    <string name="action_settings">Change Graph</string>
    <string name="xyz">X:\nY:\nZ:</string>
    <string name="graph_title">Accelerometer Graph</string>
    <string name="auto_scroll">Auto Scroll</string>
    <string name="internet_not_working">Internet not working</string>
    <string name="internet_working">Internet working</string>
    <string name="internet">Internet</string>
    <string name="derived">Derived</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="linear_acceleration">Linear Accel</string>
    <string name="menu_accelerometer">Accelerometer</string>
    <string name="menu_derived">Derived</string>
    <string name="menu_linear">Linear Acceleration</string>
    <string name="accelerometer_title">Accelerometer Graph</string>
    <string name="derived_title">Derived Graph</string>
    <string name="linear_title">Linear Acceleration Graph</string>
    <string name="menu_derived_linear">Derived Linear</string>
    <string name="derived_linear_title">Derived Linear Graph</string>
    <string name="action_exit">Exit</string>
    <string name="lights">Lights</string>
    <string name="title_activity_config">ConfigActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="config">Configuration</string>
    <string name="url">URL</string>

</resources>