<!-- 
	activity_main.xml 
Purpose: Midterm Demo
Author : File generated by Eclipse IDE
		Joao Felipe
		joaofelipenp@gmail.com
		Tiago Pimentel
		t.pimentelms@gmail.com
CSE 467S - Embedded Computing Systems
WUSTL, Spring 2013
Date   : Mar., 23, 2013
Description:
	Defines variables for strings used in interface
Version log:
	3/23/2013, Joao Felipe
		Added variables xyz, graph_title and auto_scroll. 
		Changed app_name from HelloWorld to SleepingBeauty
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/layout"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:paddingBottom="@dimen/activity_vertical_margin"
   android:paddingLeft="@dimen/activity_horizontal_margin"
   android:paddingRight="@dimen/activity_horizontal_margin"
   android:paddingTop="@dimen/activity_vertical_margin"
   android:background="#FF000000"
   tools:context=".MainActivity" >

   <TextView
      android:id="@+id/acceleration"
      android:textColor="#FFFFFFFF"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_alignParentTop="true"
      android:text="@string/xyz"
      android:textAppearance="?android:attr/textAppearanceLarge" />

   <TextView
      android:id="@+id/graphtitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_below="@+id/acceleration"
      android:text="@string/graph_title"
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:layout_marginTop="10dp"
      android:textColor="#FFFFFFFF" />
   
   <LinearLayout
      android:id="@+id/linear"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/acceleration"
      android:layout_below="@+id/graphtitle"
      android:layout_marginTop="7dp" 
      android:layout_marginBottom="40dp" >
   </LinearLayout>

   <ZoomControls
      android:id="@+id/zoom"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_alignParentRight="true" />
 
   <CheckBox
      android:id="@+id/autoscroll"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/linear"
      android:layout_alignTop="@+id/zoom"
      android:checked="true"
      android:text="@string/auto_scroll"
      android:layout_marginTop="8dp"
      android:textAppearance="?android:attr/textAppearanceMedium"
      android:textColor="#FFFFFFFF" />

   <ImageView
       android:id="@+id/wifistatus"
       android:contentDescription="@string/internet_not_working"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignRight="@+id/zoom"
       android:layout_alignTop="@+id/acceleration"
       android:layout_marginTop="15dp"
       android:layout_marginRight="15dp"
       android:src="@drawable/red" />

   <TextView
       android:id="@+id/internetStatus"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBaseline="@+id/acceleration"
       android:layout_alignBottom="@+id/acceleration"
       android:layout_alignParentRight="true"
       android:text="@string/internet"
       android:textAppearance="?android:attr/textAppearanceLarge"
       android:textColor="#FFFFFFFF" />

   <ToggleButton
       android:id="@+id/lightsButton"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/zoom"
       android:layout_alignParentTop="true"
       android:text="Lights" />

</RelativeLayout>